Updated the dashboard UI page

--- a/src/app/components/booth/dashboard-booth/dashboard-booth.component.html
+++ b/src/app/components/booth/dashboard-booth/dashboard-booth.component.html
@@ -1,5 +1,5 @@
 <p>
-  dashboard-booth works!
+  dashboard-booth works edited!
 </p>
 
 <table class="table table-bordered" [ngBusy]="{busy: busy}">
